# projectorsclient

./: .coveragerc  .gitignore  AGENTS.md  BUILD_VERIFICATION_REPORT.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_ANALYSIS_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS_REPORT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  T-002-FLOW-DIAGRAM.md  T-002-IMPLEMENTATION-SUMMARY.md  TASK_T014_IMPLEMENTATION_SUMMARY.md  TASK_T015_IMPLEMENTATION_SUMMARY.md  benchmark_help_optimizations.py  build.bat  build_manifest.json  build_verification_report.json  database_schema_verification_report.md  debug_output.txt  projector_control.spec  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  security_audit_phase4.md  smoke_test_report.txt  test_config.json  test_syntax.py  verify_implementation.py  version_info.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.planning/: GSD_ROADMAP.md  PROJECT.md  REQUIREMENTS.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
ProjectorControlWebDeployment/: .projector_entropy
docs/: API_DOCUMENTATION_SUMMARY.md  AUTO_UPDATE_IMPLEMENTATION_REPORT.md  DEPLOYMENT_TROUBLESHOOTING_DESKTOP.md  FAQ.he.md  FAQ.md  FIX_PASSWORD_ENCRYPTION_NO_ADMIN.md  HITACHI_CP-EX_DEBUGGING.md  Hitachi_CP-EX301N_CP-EX302N_Complete_Control_Documentation.md  IMPLEMENTATION_PLAN.md  LESSONS_LEARNED.md  PHASE4_COMPLETION_REPORT.md  PHASE_5_CI_CD_INTEGRATION.md  PILOT_TEST_CHECKLIST.md  README_UPDATES.md  RELEASE_PROCESS.md  ROADMAP.md  SCHEMA_COMPATIBILITY_REPORT.md  SECURITY.md  T-5.002_QSS_Stylesheet_System_Complete.md  TRANSLATION_SYSTEM.md  UPDATE_NOTIFICATION_DIALOG_USAGE.md  UPDATE_NOTIFICATION_DIALOG_VISUAL.md  build_analysis.md  theme_color_reference.md
docs/api/: ICON_LIBRARY.md  MAIN.md  README.md  STYLE_MANAGER.md  TRANSLATION_MANAGER.md
docs/archive/: README.md
docs/compatibility/: COMPATIBILITY_MATRIX.md
docs/database/: INDEX_IMPLEMENTATION.md  T-001.1_COMPLETION_REPORT.md
docs/deployment/: DEPLOYMENT_GUIDE.he.md  DEPLOYMENT_GUIDE.md
docs/devops/: .gitkeep
docs/handoffs/: SESSION_12_HANDOFF.md
docs/help-system-samples/: SAMPLE_REVIEW.md
docs/performance/: BENCHMARK_RESULTS.md  HELP_SYSTEM_BENCHMARKS.md  HELP_SYSTEM_PERFORMANCE_REPORT.md  baseline_report.md
docs/planning/: MULTI_BRAND_PROJECTOR_SUPPORT_PLAN.md  WEEK3-4_ARCHITECTURAL_REVIEW.md  WEEK3-4_ARCHITECTURE_DIAGRAM.txt  WEEK3-4_EXECUTIVE_SUMMARY.md
docs/protocols/: BENQ.md  EPSON.md  HITACHI.md  HITACHI_PJLINK_FALLBACK.md  JVC.md  NEC.md  OPTOMA.md  PANASONIC.md  PJLINK.md  README.md  SONY.md
docs/reviews/: README.md  WEEK1_GATE_REVIEW.md  WEEK3-4_GATE_REVIEW.md  _SESSION_TEMPLATE.md  latest.md
docs/security/: .gitkeep  EXECUTIVE_SUMMARY.md  PENTEST_PLAN.md  PENTEST_RESULTS.md  SECURITY_SCAN_REPORT_T5014.md  secure_coding_guidelines.md  threat_model.md
docs/testing/: .gitkeep  T003_PREPARATION_SUMMARY.md  TASK3_COMPLETION_SUMMARY.md  WEEK2_TEST_REPORT.md  WEEK3-4_INTEGRATION_TEST_PLAN.md  WEEK5-6_COVERAGE_ANALYSIS.md  pytest_guide.md
docs/uat/: UAT_FEEDBACK_FORM.md  UAT_PLAN.md  UAT_RESULTS.md  UAT_SCENARIOS.md
docs/ui/: ICON_USAGE_GUIDE.md  MAIN_WINDOW_ACCESSIBILITY_GUIDELINES.md  SVG_ICON_REVIEW_REPORT.md
docs/user-guide/: USER_GUIDE.he.md  USER_GUIDE.md
examples/: qss_theme_demo.py
installer/: projector_control.iss
logs/: plan_change_logs.md
resources/schema/: .gitkeep
scripts/: archive_build.bat  build.bat  build_manifest.py  check_size_regression.py  collect_metrics.py  create_zip_distribution.py  generate_release_notes.py  generate_version_info.py  prepare_release.py  run.ps1  smoke_test.py  sync_agents.ps1  verify_version.py
src/: __init__.py  __version__.py  main.py
src/config/: __init__.py  deployment_config.py  settings.py  validators.py
src/controllers/: __init__.py  resilient_controller.py
src/core/: __init__.py  controller_factory.py  projector_controller.py
src/database/: __init__.py  connection.py  dialect.py  sqlserver_manager.py  sqlserver_pool.py
src/i18n/: __init__.py
src/models/: __init__.py
src/network/: __init__.py  base_protocol.py  circuit_breaker.py  connection_pool.py  pjlink_protocol.py  protocol_factory.py
src/resources/: __init__.py
src/ui/: __init__.py  main_window.py
src/update/: __init__.py  github_client.py  rollout_manager.py  update_checker.py  update_downloader.py  update_worker.py  updater_script.py  version_utils.py
src/utils/: __init__.py  accessibility.py  diagnostics.py  file_security.py  logging_config.py  rate_limiter.py  security.py  single_instance.py
test/: .projector_entropy
tests/: __init__.py  conftest.py  helpers.py  test_cli_arguments.py  test_credential_security.py  test_deployment_config.py  test_password_encryption_fix.py  test_password_workflow.py  test_phase3_features.py  test_phase5_integration.py  test_qss_style_manager.py  test_translations.py
tests/benchmark/: __init__.py  conftest.py  test_command_performance.py  test_memory_performance.py  test_startup_performance.py
tests/compatibility/: __init__.py  conftest.py  test_dpi_matrix.py  test_projector_matrix.py  test_windows_matrix.py
tests/database/: test_migrations.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  invalid_config.json  sample_config.json  test_database.sql
tests/integration/: UPDATE_INTEGRATION_TEST_REPORT.md  __init__.py  test_authentication_flow.py  test_concurrent_connections.py  test_connection_pool_integration.py  test_database_integrity.py  test_database_performance.py  test_database_recovery.py  test_hebrew_ui.py  test_hitachi_pjlink_fallback.py  test_main_integration.py  test_settings_import_export.py  test_sqlserver_integration.py  (+8 more)
tools/: PJLINK_TESTING_GUIDE.md  README_HITACHI_DIAGNOSTIC.md  encrypt_credential.py  hitachi_crc_validator.py  hitachi_diagnostic.py  hitachi_traffic_capture.py  profile_startup.py  test_config_loading.py  test_github_client.py  test_hitachi_pjlink.py
workspace/: CLARIFICATIONS_AND_INTEGRATION_GUIDE.md
(+268 files in other folders)
